--- a/HealthSphere_Backend/compose.yaml
+++ b/HealthSphere_Backend/compose.yaml
@@ -1,29 +1,41 @@
+version: '3.9'
+name: 'health-sphere-backend-development'
 services:
   elasticsearch:
-    image: 'docker.elastic.co/elasticsearch/elasticsearch:7.17.10'
+    image: 'elasticsearch:7.17.23'
     environment:
       - 'ELASTIC_PASSWORD=secret'
       - 'discovery.type=single-node'
       - 'xpack.security.enabled=false'
+      - 'ES_JAVA_OPTS=-Xms2g -Xmx2g'
     ports:
-      - '9200'
-      - '9300'
+      - '9200:9200'
+      - '9300:9300'
   postgres:
-    image: 'postgres:latest'
+    image: 'postgres:16.4'
     environment:
-      - 'POSTGRES_DB=mydatabase'
+      - 'POSTGRES_DB=healthsphere'
       - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=myuser'
+      - 'POSTGRES_USER=1olelllka'
     ports:
-      - '5432'
+      - '5432:5432'
+    volumes:
+      - '~/apps/postgres:/var/lib/postgresql/data'
   rabbitmq:
-    image: 'rabbitmq:latest'
+    image: 'rabbitmq:3.13-management'
     environment:
       - 'RABBITMQ_DEFAULT_PASS=secret'
       - 'RABBITMQ_DEFAULT_USER=myuser'
     ports:
-      - '5672'
+      - '5672:5672'
+      - '15672:15672'
+    volumes:
+      - '~/apps/rabbitmq-data:/var/lib/rabbitmq'
+
   redis:
-    image: 'redis:latest'
+    image: 'redis/redis-stack:latest'
     ports:
-      - '6379'
+      - "6379:6379"
+      - "8001:8001"
+    volumes:
+      - '~/apps/.redis-data:/data'
