--- a/HealthSphere_Backend/pom.xml
+++ b/HealthSphere_Backend/pom.xml
@@ -114,9 +114,9 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
-			<groupId>me.paulschwarz</groupId>
-			<artifactId>spring-dotenv</artifactId>
-			<version>4.0.0</version>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
