--- a/HealthSphere_Backend/src/main/resources/application.yml
+++ b/HealthSphere_Backend/src/main/resources/application.yml
@@ -4,8 +4,8 @@ spring:
   datasource:
     driverClassName: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/healthsphere
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+    username: 1olelllka
+    password: secret
   jpa:
     hibernate:
       ddl-auto: update
@@ -13,6 +13,3 @@ spring:
     show-sql: true
 server:
   host: 8000
-
-jwt:
-  secret: ${JWT_SECRET}
