--- a/HealthSphere_Backend/src/main/resources/application.yml
+++ b/HealthSphere_Backend/src/main/resources/application.yml
@@ -9,7 +9,9 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-      format_sql: true
     show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
 server:
   port: 8000
