--- a/HealthSphere_Backend/src/main/resources/application.yml
+++ b/HealthSphere_Backend/src/main/resources/application.yml
@@ -13,5 +13,13 @@ spring:
     properties:
       hibernate:
         format_sql: true
+  elasticsearch:
+    uris: http://localhost:9200
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: myuser
+    password: secret
+
 server:
   port: 8000
