--- a/HealthSphere_Backend/src/test/resources/application.yml
+++ b/HealthSphere_Backend/src/test/resources/application.yml
@@ -7,3 +7,20 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create-drop
+  elasticsearch:
+    uris: http://localhost:9200
+  rabbitmq:
+#    host: localhost
+#    port: 5672
+#    username: myuser
+#    password: secret
+    listener:
+      simple:
+        auto-startup: false
+
+logging:
+  level:
+    org:
+      springframework:
+        amqp: DEBUG
+        rabbit: DEBUG
