--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "react-router-dom": "^6.26.1",
     "react-scroll": "^1.9.0",
     "recharts": "^2.12.7",
+    "redux-persist": "^6.0.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
