--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -23,3 +23,11 @@ spring:
 
 server:
   port: 8000
+
+management:
+  endpoints:
+      web:
+        cors:
+          allowed-origins: http://localhost:5173
+          allowed-methods: GET,POST,PUT,PATCH,DELETE,OPTIONS
+          allow-credentials: true
