--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -20,6 +20,11 @@ spring:
     port: 5672
     username: myuser
     password: secret
+  redis:
+    host: localhost
+    port: 6379
+  cache:
+    type: redis
 
 server:
   port: 8000
