--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -40,3 +40,6 @@ management:
           allow-credentials: true
 springdoc:
   show-actuator: true
+  swagger-ui:
+    disable-swagger-default-url: true
+    path: /apiDocs
