--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-scroll": "^1.9.0",
+    "react-spinners": "^0.14.1",
     "recharts": "^2.12.7",
     "redux-persist": "^6.0.0",
     "sonner": "^1.5.0",
