--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,3 +40,34 @@ jobs:
       #   with:
       #     name: client-build
       #     path: ./client/dist
+
+  build-server:
+    name: Build Server
+    runs-on: ubuntu-latest
+    needs: build-client
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: "17"
+          distribution: "temurin"
+
+      - name: Cache Maven dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-maven-${{ hashFiles('server/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
+      - name: Build server
+        working-directory: ./server
+        run: mvn clean install -DskipTests
+
+      - name: Run server tests
+        working-directory: ./server
+        run: mvn test
