Added a python script to add sample data. Deleted any admin logic on backend side, I'll handle it later.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,13 @@
 name: "health-sphere"
 
 services:
+  healthsphere-sample-data:
+    build:
+      context: ./data
+      dockerfile: Dockerfile
+    depends_on:
+      - healthsphere-backend
+
   healthsphere-frontend:
     build:
       context: ./client
